examples/invalid/semantics/ignored_error.aru
module examples.invalid.semantics.ignoredError

func openConfig(path str) (str, Err?) {
    return "config", nil
}

func main() {
    // expected: semantic error; returned Err? must be handled.
    config = openConfig("app.toml")
}
